// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge renders correctly 1`] = `
<DocumentFragment>
  <span
    class="c-badge"
    data-name="badge"
  >
    lorem
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly a ghost button 1`] = `
<DocumentFragment>
  <span
    class="c-badge c-badge--ghost"
    data-name="badge"
  >
    lorem
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly with a type 1`] = `
<DocumentFragment>
  <span
    class="c-badge c-badge--success"
    data-name="badge"
  >
    lorem
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly with rounded corners 1`] = `
<DocumentFragment>
  <span
    class="c-badge c-badge--error c-badge--rounded"
    data-name="badge"
  >
    lorem
  </span>
</DocumentFragment>
`;
